--- a/django/static/style.css
+++ b/django/static/style.css
@@ -18,6 +18,14 @@ body {
   margin: 0;
 }
 
+a {
+  color: #1188DD;
+}
+
+a:active {
+  color: #0066BB;
+}
+
 hr {
   border: 0;
   border-bottom: 1px solid gray;
@@ -85,7 +93,12 @@ input[type="text"], input[type="password"] {
   width: 100%;
 }
 
+input[type="text"]:focus, input[type="password"]:focus {
+  box-shadow: 0 0 2px #BBBBBB;
+}
+
 #header {
+  border: 1px solid #CCCCCC;
   border-top: 0.2em solid #1188DD;
   color: #2a2a2a;
   padding: 1.5em 2em;
@@ -114,7 +127,7 @@ input[type="text"], input[type="password"] {
 }
 
 #header #leftnav a {
-  color: #2a2a2a;
+  color: #f5f5f5;
 }
 
 #header #title {
@@ -192,6 +205,7 @@ input[type="text"], input[type="password"] {
   background-color: #ffffff;
   margin: 0.25em 0.25em 1.5em;
   padding: 1em 1.25em;
+  border: 1px solid #CCCCCC;
   box-shadow: 0 0 3px #CCCCCC;
   transition: all 0.2s ease 0s;
   overflow: auto;
@@ -211,4 +225,34 @@ input[type="text"], input[type="password"] {
   max-width: 100%;
   width: 100%;
   height: 6em;
+}
+
+/** For login.html **/
+#login-container {
+  margin: 0 auto;
+  width: 400px;
+  padding: 1.8em 0 0;
+  color: #606060;
+  line-height: 1.8em;
+}
+
+#login-container form {
+  padding: 1em 2em;
+}
+
+#login-container input {
+  font-size: 24px;
+}
+
+#login-container label {
+  font-size: 14px;
+}
+
+#login-container input[type=submit] {
+  font-size: inherit;
+  padding: 0.4em 0.8em;
+}
+
+#login-container #result {
+  clear: both;
 }
