--- a/django/sportsrec/templates/sportsrec/login.html
+++ b/django/sportsrec/templates/sportsrec/login.html
@@ -1,47 +1,39 @@
 {% extends "sportsrec/base.html" %}
 {% block content %}
 
-<div id="login-container">
- <div class="widget">
-     <form id="login" action="" method="post">
-       <div>
-        {% csrf_token %}
-        {% if next %}
-         <input type="hidden" name="next" value="{{ next }}" />
+<div class="form-container">
+  <div class="widget">
+  <form method="post" action="{% url 'sportsrec:login' %}">
+      {% csrf_token %}
+      {# Include the hidden fields #}
+      {% for hidden in form.hidden_fields %}
+      {{ hidden }}
+      {% endfor %}
+      {# Include the visible fields #}
+      {% for field in form.visible_fields %}
+          <p>
+              {{ field.label_tag }} {{ field }}
+              {% for error in field.errors %}
+              <div class="fail">{{ error|escape }}</div>
+              {% endfor %}
+          </p>
+      {% endfor %}
+      
+      <p style="float:left; margin:0;">
+        <a href="#" onclick="alert(':(')">Forgotten password?</a>
+      </p>
+      <p style="float:right; margin:0;">
+         <input type="submit" value="Login">
+      </p>
+      
+      <p id="result" class="fail">
+        &nbsp;
+        {{ form.non_field_errors }}
+        {% if result %}
+        {{ result }}
         {% endif %}
-       </div>
-       <p>
-         <label>
-           Username<br>
-           <input name="username" type="text">
-           <script type="text/javascript">
-              $("#login input[name='username']").focus();
-           </script>
-         </label>
-       </p>
-       <p>
-         <label>
-           Password<br>
-           <input name="password" type="password">
-         </label>             
-       </p>
-       <p style="float:left; margin:0;">
-         <a href="#" onclick="alert(':(')">Forgotten password?</a>
-       </p>
-       <p style="float:right; margin:0;">
-         <input type="submit" value="Log In">
-       </p>
-       {% if login_failed %}
-       <p id="result" class="fail">
-         Login failed!
-       </p>
-       {% else %}
-       <p id="result">
-         &nbsp;
-       </p>
-       {% endif %}
-      </form>
- </div>
+      </p>
+  </form>
+  </div>
 </div>
-
 {% endblock %}
