--- a/django/sportsrec/templates/sportsrec/register.html
+++ b/django/sportsrec/templates/sportsrec/register.html
@@ -1,12 +1,30 @@
 {% extends "sportsrec/base.html" %}
 {% block content %}
 
-<div class="widget">
+<div class="form-container widget">
   <div class="title centre">Registration form</div>
-  <form method="POST" action="">
-    {% csrf_token %}
-    
-    <input type="submit" value="Register">
+  <form method="post" action="{% url 'sportsrec:register' %}">
+      {% csrf_token %}
+      {# Include the hidden fields #}
+      {% for hidden in form.hidden_fields %}
+      {{ hidden }}
+      {% endfor %}
+      {# Include the visible fields #}
+      {% for field in form.visible_fields %}
+          <div class="fieldWrapper">
+              {{ field.label_tag }} {{ field }}
+              {% for error in field.errors %}
+              <div class="fail">{{ error|escape }}</div>
+              {% endfor %}
+          </div>
+      {% endfor %}
+      <p style="float:right; margin:0;">
+         <input type="submit" value="Register">
+      </p>
+      
+      <div id="result">
+        {{ form.non_field_errors }}
+      </div>
   </form>
 </div>
 
