--- a/django/sportsrec/templates/sportsrec/index.html
+++ b/django/sportsrec/templates/sportsrec/index.html
@@ -1,15 +1,16 @@
 {% extends "sportsrec/base.html" %}
-{% block content %}
 
-<div id="sidebar">
-  <div class="widget">
-    <div class="title">Status</div>
-    <div class="item">
+{% block sidebar-content %}
+<div class="widget">
+  <div class="title">Status</div>
+  <div class="item">
 
-    </div>         
-  </div>
+  </div>         
 </div>
 <!-- End sidebar -->
+{% endblock %}
+
+{% block content %}
 
 <div id="main">
   <div class="widget">
