--- a/django/sportsrec/templates/sportsrec/register.html
+++ b/django/sportsrec/templates/sportsrec/register.html
@@ -1,4 +1,9 @@
 {% extends "sportsrec/base.html" %}
+
+{% block sidebar %}
+{# Hide the sidebar #}
+{% endblock %}
+
 {% block content %}
 
 <div class="form-container widget">
