--- a/django/static/style.css
+++ b/django/static/style.css
@@ -182,7 +182,7 @@ input[type="text"]:focus, input[type="password"]:focus {
 }
 
 #sidebar{
-  float: right;
+  float: left;
   min-width: 20%;
   max-width: 26%;
 }
@@ -198,7 +198,7 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 #main {
   overflow: auto;
-  padding-right: 2em;
+  padding-left: 2em;
   min-width: 400px;
 }
 
@@ -218,33 +218,6 @@ input[type="text"]:focus, input[type="password"]:focus {
   height: 200px;
 }
 
-.widget {
-  background-color: #ffffff;
-  margin: 0.25em 0.25em 1.5em;
-  padding: 1em 1.25em;
-  border: 1px solid #CCCCCC;
-  box-shadow: 0 0 3px #CCCCCC;
-  transition: all 0.2s ease 0s;
-  overflow: auto;
-}
-
-.widget:hover {
-  box-shadow: 0 0 0.4em #5389B0;
-}
-
-/** Hack **/
-.clear {
-  clear: both;
-}
-
-#errorlog {
-  overflow: auto;
-  max-width: 100%;
-  width: 100%;
-  height: 6em;
-}
-
-/** For login.html **/
 .form-container {
   margin: 0 auto;
   width: 400px;
@@ -272,4 +245,30 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 .form-container #result {
   clear: both;
+}
+
+.widget {
+  background-color: #ffffff;
+  margin: 0.25em 0.25em 1.5em !important;
+  padding: 1em 1.25em;
+  border: 1px solid #CCCCCC;
+  box-shadow: 0 0 3px #CCCCCC;
+  transition: all 0.2s ease 0s;
+  overflow: auto;
+}
+
+.widget:hover {
+  box-shadow: 0 0 0.4em #5389B0;
+}
+
+/** Hack **/
+.clear {
+  clear: both;
+}
+
+#errorlog {
+  overflow: auto;
+  max-width: 100%;
+  width: 100%;
+  height: 6em;
 }
