Add user profile edit + login redirect

--- a/django/sportsrec/templates/sportsrec/thanks.html
+++ b/django/sportsrec/templates/sportsrec/thanks.html
@@ -8,7 +8,8 @@
 <div class="form-container">
   <div class="widget centre">
     <div class="title centre">Thanks</div>
-    Thanks for registering, {{name}}!
+    Thanks for registering, {{name}}!<br>
+    Click <a href="{% url 'sportsrec:index' %}">here</a> to continue!
   </div>
 </div>
 {% endblock %}
