--- a/django/sportsrec/templates/sportsrec/base.html
+++ b/django/sportsrec/templates/sportsrec/base.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="{{ STATIC_URL }}sportsrec.gui.js"></script>
 
     <link rel="Shortcut Icon" type="image/x-icon" href="{{ STATIC_URL }}favicon.ico" >
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}nav-menu.css">
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style.css">
     <script type="text/javascript">
       $(document).ready(function () {
         //$("#menu-container").populateNavbar();
@@ -54,11 +54,11 @@
     <div id="content">
       {% block sidebar %}
       <div id="sidebar">
-        <div class="widget nav-menu">
+        <div class="nav-menu widget">
           <ul>
             <li><a href="{% url 'sportsrec:index' %}">Home</a></li>
             {% if user.is_authenticated %}
-            <li><a href="#">User profile</a></li>
+            <li><a href="{% url 'sportsrec:user_profile' %}">User profile</a></li>
             {% endif %}
             <li><a href="#">Club list</a></li>
             <li><a href="#">Club search</a></li>
