Update club models and add meta info

--- a/django/sportsrec/templates/sportsrec/index.html
+++ b/django/sportsrec/templates/sportsrec/index.html
@@ -4,8 +4,12 @@
 <div class="widget">
   <div class="title">Status</div>
   <div class="item">
-
-  </div>         
+    {{ stats.usercount }} <br>
+    {{ stats.membercount }} <br>
+    {{ stats.clubcount }} <br>
+    {{ stats.membercountavg }} <br>
+    {{ stats.membercountperclub }} <br>
+  </div>
 </div>
 <!-- End sidebar -->
 {% endblock %}
