--- a/django/sportsrec/templates/sportsrec/register.html
+++ b/django/sportsrec/templates/sportsrec/register.html
@@ -6,6 +6,18 @@
 
 {% block content %}
 
+{% if thanks %}
+
+<div class="form-container">
+  <div class="widget centre">
+    <div class="title centre">Thanks</div>
+    Thanks for registering, {{name}}!<br>
+    Click <a href="{% url 'sportsrec:index' %}">here</a> to continue!
+  </div>
+</div>
+
+{% else %}
+
 <div class="form-container widget">
   <div class="title centre">Registration form</div>
   <form method="post" action="{% url 'sportsrec:register' %}">
@@ -32,5 +44,7 @@
       </div>
   </form>
 </div>
+
+{% endif %}
 
 {% endblock %}
