--- a/django/static/style.css
+++ b/django/static/style.css
@@ -183,8 +183,7 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 #sidebar{
   float: left;
-  min-width: 20%;
-  max-width: 26%;
+  width: 210px;
 }
 
 #sidebar .title {
