--- a/django/sportsrec/templates/sportsrec/login.html
+++ b/django/sportsrec/templates/sportsrec/login.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+{# Override the main block #}
 
 <div id="login-container" class="form-container">
   <div class="widget">
