added lots of htmls for crud stuff
some of them are empty

--- a/django/sportsrec/templates/sportsrec/base.html
+++ b/django/sportsrec/templates/sportsrec/base.html
@@ -59,7 +59,9 @@
             <li><a href="{% url 'sportsrec:index' %}">Home</a></li>
             {% if user.is_authenticated %}
             <li><a href="#">User profile</a></li>
+            <li><a href="{% url 'sportsrec:edit_contact' %}">Contact Details</a></li>
             {% endif %}
+            <li><a href="{% url 'sportsrec:create_club' %}">Create a Club</a></li>
             <li><a href="#">Club list</a></li>
             <li><a href="#">Club search</a></li>
             {% block sidebar-user-menu %}
