--- a/django/sportsrec/templates/sportsrec/index.html
+++ b/django/sportsrec/templates/sportsrec/index.html
@@ -13,8 +13,8 @@
   <div class="title">Dashboard</div>
   You own or administer:
   <ul>
-    <li>{{stats.user_member_count}} member(s)</li>
-    <li>{{stats.user_membership_count}} membership(s)</li>
+    <li>{{stats.member_count}} member(s)</li>
+    <li>{{stats.membership_count}} membership(s)</li>
     <li>{{stats.user_club_count}} club(s)</li>
   </ul>
 </div>
