Add detail view for members (publicly accessible)

--- a/django/sportsrec/templates/sportsrec/add_edit.html
+++ b/django/sportsrec/templates/sportsrec/add_edit.html
@@ -10,7 +10,11 @@
         Edit
       {% endif %}
 
+      {% if detail_view %}
+      <a href="{% url detail_view pk=pk %}">{{ name }}</a>
+      {% else %}
       {{ name }}
+      {% endif %}
     </div>
 
     <form method="post" 
