More CRU, but not the D stuff yet.

--- a/django/sportsrec/templates/sportsrec/base.html
+++ b/django/sportsrec/templates/sportsrec/base.html
@@ -78,7 +78,7 @@
             <li><a href="{% url 'sportsrec:user_profile' %}">User profile</a></li>
             <li><a href="{% url 'sportsrec:members' %}">Manage members</a></li>
             <li><a href="{% url 'sportsrec:membership_list' %}">Manage memberships</a></li>
-            <li><a href="#">Manage clubs</a></li>
+            <li><a href="{% url 'sportsrec:user_club_list' %}">Manage clubs</a></li>
             <li><a href="{% url 'sportsrec:club_add' %}">Add a club</a></li>
           </ul>
         </div>
