--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -16,7 +16,18 @@
     <tr><th>Member count</th><td>{{club.member_count}}</td></tr>
     <tr><th>Date created</th><td>{{club.created}}</td></tr>
     <tr><th>Recruiting</th><td>{%if club.recruiting%}Yes{%else%}No{%endif%}</td></tr>
-    <tr><th>Contact</th><td>{{club.contact|default:''}}</td></tr>
+    <tr>
+      <th>Contact</th>
+      {% if club.contact %}
+      <td class="menu-hilight clickable">
+        <a href="{% url 'sportsrec:member_detail' pk=club.contact.id%}">
+          {{club.contact|default:''}}
+        </a>
+      </td>
+      {% else %}
+      <td></td>
+      {% endif %}
+    </tr>
     <tr>
       <th>Owner</th>
       <td class="menu-hilight clickable">
@@ -29,7 +40,7 @@
       <th>Facebook</th>
       {% if club.facebook %}
       <td class="clickable menu-hilight">
-        <a href="{{club.facebook}}">{{club.facebook}}</a>
+        <a href="https://facebook.com/{{club.facebook}}">{{club.facebook}}</a>
       </td>
       {% else %}
       <td></td>
@@ -39,13 +50,13 @@
       <th>Twitter</th>
       {% if club.twitter %}
       <td class="clickable menu-hilight">
-        <a href="{{club.twitter}}">{{club.twitter}}</a>
+        <a href="https://twitter.com{{club.twitter}}">{{club.twitter}}</a>
       </td>
       {% else %}
       <td></td>
       {% endif %}
     </tr>
-    <tr><th>Description</th><td>{{club.description}}</td></tr>
+    <tr><th>Description</th><td class="break">{{club.description}}</td></tr>
   </table>
 
   {% ifequal club.owner.owner user %}
