Fix twitter links

--- a/django/sportsrec/templates/sportsrec/club_list.html
+++ b/django/sportsrec/templates/sportsrec/club_list.html
@@ -54,7 +54,7 @@
 
         {% if club.twitter %}
         <td class="clickable menu-hilight">
-          <a href="https://twitter.com{{club.twitter}}">{{club.twitter}}</a>
+          <a href="https://twitter.com/{{club.twitter}}">{{club.twitter}}</a>
         </td>
         {% else %}
         <td></td>
