--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -50,7 +50,7 @@
       <th>Twitter</th>
       {% if club.twitter %}
       <td class="clickable menu-hilight">
-        <a href="https://twitter.com{{club.twitter}}">{{club.twitter}}</a>
+        <a href="https://twitter.com/{{club.twitter}}">{{club.twitter}}</a>
       </td>
       {% else %}
       <td></td>
